<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D0A020"
   >

    <Button
        android:id="@+id/Continue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/popup_continue"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
     />
    
    <Button
        android:id="@+id/NewGame"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Continue"
        android:layout_centerHorizontal="true"
        android:text="@string/popup_newgame"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
     />
 
     <Button
        android:id="@+id/Save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NewGame"
        android:layout_centerHorizontal="true"
        android:text="@string/popup_save"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
     />
     
     <Button
        android:id="@+id/Load"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Save"
        android:layout_centerHorizontal="true"
        android:text="@string/popup_load"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
     />

     <Button
         android:id="@+id/Exit"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/Load"
          android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
         android:text="@string/popup_exit" />
     
</RelativeLayout>