<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@drawable/wood"
    tools:context=".Main_Menu_Activity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_titel"
        android:layout_centerHorizontal="TRUE"
        android:id="@+id/titel"
        android:textSize="40sp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_welcome"
        android:layout_centerHorizontal="TRUE"
        android:layout_below="@+id/titel"
        android:id="@+id/welcome_message"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/connect"
        android:layout_width="100dp"
        android:layout_height="70dp"
       
        android:layout_below="@+id/welcome_message"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="TRUE"

        android:background="@drawable/white"
        android:onClick="connect"
        android:text="@string/main_connect" />
    
    <Button
        android:id="@+id/preferences"
        android:layout_width="100dp"
        android:layout_height="70dp"

        android:layout_below="@+id/connect"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@+id/connect"
        android:background="@drawable/black"
        android:onClick="preferences"
        android:text="@string/main_preferences"
        android:textColor="#F0FFFF"
         />

    <Button
        android:id="@+id/my_account"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/preferences"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@+id/connect"
        android:background="@drawable/white"
        android:onClick="my_account"
        android:text="@string/main_account"
         />

    

    <Button
        android:id="@+id/quit"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/connect"
        android:layout_below="@+id/my_account"
        android:layout_marginTop="25dp"
        android:background="@drawable/black"
        android:textColor="#F0FFFF"
        android:onClick="quit"
        
        android:text="@string/main_quit" />

    
    
</RelativeLayout>