<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@drawable/wood"
    tools:context=".Account_Activity" >

    <TextView
        android:id="@+id/titel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_titel"
        
        android:layout_centerHorizontal="TRUE"   
        android:textSize="30sp" />
    
    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_name"
        
        android:layout_below="@+id/titel"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />
    
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textAutoCorrect"

         
            
        android:layout_below="@+id/name_text"
        android:layout_marginTop="5dp"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/age_text"       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_age"
        
        android:layout_below="@+id/name"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />
    
    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textAutoCorrect"

        
        
        android:layout_below="@+id/age_text"
        android:layout_marginTop="5dp"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/rating_text"      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_rating"
        
        android:layout_below="@+id/age"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />
    
    <TextView
        android:id="@+id/rating"      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_rating_number"
        
        android:layout_below="@+id/rating_text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="70dp"
        
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="@drawable/white"
        android:onClick="back"
        android:text="@string/back_button" />
    

</RelativeLayout>
